--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,32 @@
             "email": "Chris@ChrisKankiewicz.com"
         }
     ],
+    "support": {
+        "issues": "https://github.com/PHLAK/SemVer-CLI/issues"
+    },
     "require": {
-        "php": ">=5.4",
-        "symfony/console": "^3.1",
-        "phlak/semver": "^1.0"
+        "php": ">=7.2",
+        "symfony/console": "^5.0",
+        "phlak/semver": "^3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "phpunit/phpunit": "^8.0 || ^9.0",
+        "symfony/var-dumper": "^5.1",
+        "vimeo/psalm": "3.12"
     },
     "autoload": {
         "psr-4": {
             "SemVerCli\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
