Added semver to Composer binary files

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
             "Tests\\": "tests/"
         }
     },
+    "bin": ["semver"],
     "config": {
         "sort-packages": true,
         "optimize-autoloader": true
