--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,22 @@
 {
     "name": "phlak/semver-cli",
     "description": "CLI app for managing semantic versioning within a project",
-    "type": "project",
+    "type": "cli",
     "license": "MIT",
     "authors": [
         {
             "name": "Chris Kankiewicz",
             "email": "Chris@ChrisKankiewicz.com"
+        }
+    ],
+    "funding": [
+        {
+            "type": "github",
+            "url": "https://github.com/sponsors/PHLAK"
+        },
+        {
+            "type": "paypal",
+            "url": "https://paypal.me/ChrisKankiewicz"
         }
     ],
     "support": {
@@ -18,6 +28,7 @@
         "phlak/semver": "^3.2"
     },
     "require-dev": {
+        "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "^2.3",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "symfony/var-dumper": "^5.1",
