--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "require-dev": {
         "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "^2.3",
+        "phlak/coding-standards": "^0.1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "symfony/var-dumper": "^5.1",
         "vimeo/psalm": "3.14.1"
