--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "phlak/coding-standards": "^0.1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "symfony/var-dumper": "^5.1",
-        "vimeo/psalm": "3.14.1"
+        "vimeo/psalm": "^3.14"
     },
     "autoload": {
         "psr-4": {
