--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "phlak/semver-cli",
-    "description": "CLI app for managing semantic versioning within a project",
+    "description": "CLI tool for managing semantic versioning within a project",
     "type": "cli",
     "license": "MIT",
     "authors": [
@@ -26,13 +26,15 @@
         "php": ">=7.2",
         "phlak/semver": "^3.2",
         "php-di/php-di": "^6.2",
-        "symfony/console": "^5.0"
+        "symfony/console": "^5.0",
+        "symfony/event-dispatcher": "^5.0"
     },
     "require-dev": {
         "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "^2.3",
         "phlak/coding-standards": "^0.1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
+        "psy/psysh": "^0.10.4",
         "symfony/var-dumper": "^5.1",
         "vimeo/psalm": "^3.14"
     },
