--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,6 +3,7 @@
 require __DIR__ . '/vendor/autoload.php';
 
 $finder = PhpCsFixer\Finder::create()->in([
+    __DIR__ . DIRECTORY_SEPARATOR . 'bin',
     __DIR__ . DIRECTORY_SEPARATOR . 'src',
     __DIR__ . DIRECTORY_SEPARATOR . 'tests',
 ])->notPath(['cache', 'vendor']);
