--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -8,4 +8,9 @@ $finder = PhpCsFixer\Finder::create()->in([
     __DIR__ . DIRECTORY_SEPARATOR . 'tests',
 ])->notPath(['cache', 'vendor']);
 
-return PHLAK\CodingStandards\ConfigFactory::make($finder);
+return PHLAK\CodingStandards\ConfigFactory::make($finder, [
+    'php_unit_set_up_tear_down_visibility' => true,
+    'php_unit_test_annotation' => [
+        'style' => 'annotation',
+    ],
+])->setRiskyAllowed(true);
