--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ os: linux
 dist: bionic
 language: php
 
+env:
+  - PHP_CS_FIXER_IGNORE_ENV="true"
+
 php:
   - 7.4
   - 8.0
@@ -19,6 +22,6 @@ cache:
 install: composer install
 
 script:
-  - '[[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]] && vendor/bin/php-cs-fixer fix --diff --dry-run || echo "Skipping coding standards check"'
+  - vendor/bin/php-cs-fixer fix --diff --dry-run
   - vendor/bin/psalm --show-info=true
   - vendor/bin/phpunit --coverage-text
