--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
     },
     "require-dev": {
         "phlak/coding-standards": "^2.0",
-        "phpunit/phpunit": "^8.0 || ^9.0",
         "psy/psysh": "^0.10.4",
         "symfony/var-dumper": "^5.1",
-        "vimeo/psalm": "^4.0"
+        "vimeo/psalm": "^4.0",
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "autoload": {
         "psr-4": {
