--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,19 @@
         "issues": "https://github.com/PHLAK/SemVer-CLI/issues"
     },
     "require": {
-        "php": ">=7.4",
+        "php": "^8.1 || ^8.2 || ^8.3",
         "composer/composer": "^2.0",
         "phlak/semver": "^4.0",
-        "php-di/php-di": "^6.2",
-        "symfony/console": "^5.0",
-        "symfony/event-dispatcher": "^5.0"
+        "php-di/php-di": "^7.0",
+        "symfony/console": "^7.0",
+        "symfony/event-dispatcher": "^7.0"
     },
     "require-dev": {
         "phlak/coding-standards": "^2.0",
-        "psy/psysh": "^0.11.0",
-        "symfony/var-dumper": "^5.1",
-        "vimeo/psalm": "^4.0",
-        "yoast/phpunit-polyfills": "^1.0"
+        "psy/psysh": "^0.12",
+        "symfony/var-dumper": "^7.0",
+        "vimeo/psalm": "^5.0",
+        "yoast/phpunit-polyfills": "^2.0"
     },
     "autoload": {
         "psr-4": {
