--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
         "composer/composer": "^2.0",
         "phlak/semver": "^4.0",
         "php-di/php-di": "^7.0",
-        "symfony/console": "^7.0",
-        "symfony/event-dispatcher": "^7.0"
+        "symfony/console": "^6.0 || ^7.0",
+        "symfony/event-dispatcher": "^6.0 || ^7.0"
     },
     "require-dev": {
         "phlak/coding-standards": "^2.0",
         "psy/psysh": "^0.12",
-        "symfony/var-dumper": "^7.0",
+        "symfony/var-dumper": "^6.0 || ^7.0",
         "vimeo/psalm": "^5.0",
         "yoast/phpunit-polyfills": "^2.0"
     },
